# spherical_code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  environment.sh  environment.yml
release/v1.0.0/solver/: SolverMinPotentialNaive.cpp  Vector3.hpp
release/v1.0.1/solver/: SolverMinPotentialNaive.hpp  SolverMinPotentialNaive.test.cpp
release/v1.0.2/solver/: SolverMinPotentialNaive.cpp  SolverMinPotentialNaive.hpp
src/: alpha.ipynb  result_analyzer.ipynb  type_counter.ipynb
src/batch_solver/: min_potential_cpp.py  min_potential_cpp_celery.py
src/batch_solver/celery/: .gitignore  autoscaler_cpu.py  config-example.py  tasks.py
src/solver/: SolverBase.hpp  SolverBaseTorch.hpp  SolverMaxVolume.cpp  SolverMaxVolume.hpp  SolverMaxVolume.test.cpp  SolverMinPotentialNaive.cpp  SolverMinPotentialNaive.hpp  SolverMinPotentialNaive.test.cpp  SolverMinPotentialNaiveTorch.cpp  SolverMinPotentialNaiveTorch.hpp  loader_txt.py  solver_base.py  solver_base_taichi.py  solver_base_torch.py  solver_chain.py  solver_min_potential.py  solver_min_potential_taichi.py  solver_min_potential_torch.py  solver_orientation.py  solver_random.py  solver_random_taichi.py  solver_random_torch.py  util.hpp  util.py
